# proxy

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.lib.txt  CMakeLists.txt  CMakeLists.txt.bkp  CMakeLists.windows.txt  Dockerfile  Dockerfile.lib.alpine  Dockerfile.lib.ubuntu  Dockerfile.ubuntu  Makefile  README.md  build.android.sh  do_auth.js  io.hpp  main.cpp  proxy.service.in  socks_server-2012.sln  socks_server-2012.vcxproj  socks_server-2013.sln  socks_server-2013.vcxproj  socks_server-2013.vcxproj.filters  socks_server.hpp  socks_server.sln  socks_server.vcproj
.circleci/: config.yml
.gitea/workflows/: Build.yml
.github/workflows/: Build.yml
cmake/: CheckCXXLinkerFlag.cmake  FindGit.cmake  FindIOUring.cmake  HunterGate.cmake  cross.cmake  mingw.cmake
doc/: client.conf  client.conf.example  server.conf  server.conf.example
doc/pam.example/: pam_sqlite.c  proxy-service
doc/rfc/: rfc9298.txt
example/: CMakeLists.txt  README.md
example/data_flow/: CMakeLists.txt  data_flow.cpp
example/http_proxy_client/: CMakeLists.txt  http_proxy_client.cpp
example/music_player/: README.md  index.html
example/nested_proxy/: CMakeLists.txt  nested_proxy.cpp
example/proxy_server/: CMakeLists.txt  proxy_server.cpp
example/simple_proxy/: CMakeLists.txt  simple_proxy.cpp
example/socks_client/: CMakeLists.txt  socks_client.cpp
example/socks_server/: CMakeLists.txt  socks_server.cpp
libsocks/: async_connect.hpp  socks_client.hpp
proxy/: CMakeLists.txt
proxy/include/proxy/: async_connect.hpp  base_stream.hpp  default_cert.hpp  dns_cache.hpp  fileop.hpp  http_proxy_client.hpp  ip_database.hpp  ipip.hpp  logging.hpp  proxy.hpp  proxy_server.hpp  proxy_session.hpp  proxy_socket.hpp  proxy_stream.hpp  proxy_util.hpp  scoped_exit.hpp  scramble.hpp  socks_client.hpp  socks_enums.hpp  socks_error_code.hpp  socks_io.hpp  socks_server.hpp  ssl_stream.hpp  stdio_stream.hpp  strutil.hpp  tcp_socket.hpp  tcp_stream.hpp  uds_socket.hpp  url_info.hpp  use_awaitable.hpp  variant_stream.hpp  xxhash.hpp
proxy/src/: default_cert.cpp  ip_database.cpp  ipip.cpp  lib_asio_beast.cpp  proxy_server.cpp  proxy_session.cpp  xxhash.cpp
rfc/: socks4.protocol.txt
server/: CMakeLists.txt
server/common/: main.hpp
server/httpc/: CMakeLists.txt
server/httpc/include/httpc/: httpc.hpp
server/httpc/src/: httpc.cpp
server/launcher/: CMakeLists.txt  main.cpp
server/proxy_server/: CMakeLists.lib.txt  CMakeLists.txt  main.cpp  main.hpp  proxy_server.cpp  version.cpp
socks/: CMakeLists.txt
socks/include/proxy/: scoped_exit.hpp  socks_client.hpp  socks_enums.hpp
socks/include/socks/: async_connect.hpp  base_stream.hpp  default_cert.hpp  http_proxy_client.hpp  logging.hpp  scoped_exit.hpp  socks_client.hpp  socks_enums.hpp  socks_error_code.hpp  socks_io.hpp  socks_server.hpp  use_awaitable.hpp
socks/include/uri/: uri_view.hpp
socks/include/url/: url_view.hpp
socks/src/main/: main.cpp
socks/src/socks/: socks_client.cpp  socks_error_code.cpp  socks_server.cpp
src/: client.cpp  io.hpp  main.cpp  server.cpp  socks_client.hpp  socks_server.hpp  v7.c  v7.h
test/: flow.conf  test_proxy.cpp  test_proxy_ws.cpp  test_proxy_ws_manager.cpp
test/lnx/: test_dataflow.cpp  test_dataflow_ws.cpp  test_dataflow_ws_manager.cpp  test_dataflow_ws_params.cpp
test/win/: test_dataflow.cpp  test_dataflow_ws.cpp  test_dataflow_ws_manager.cpp  test_dataflow_ws_params.cpp
